# egui-map-view

./: .all-contributorsrc  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: pullrequest_test.yaml
examples/: areas.rs  data.geojson  draw_layer.rs  draw_many_layers.rs  draw_many_layers_geojson.rs  draw_overlay_tiles.rs  geojson.rs  layout.rs  layout2.rs  layout3.rs  layout4.rs  place_text.rs  simple.rs  svg_layer.rs  window.rs
src/: config.rs  layers.rs  lib.rs  projection.rs
src/layers/: area.rs  drawing.rs  geojson.rs  mod.rs  svg.rs  text.rs  tile.rs
src/layers/area/: geojson.rs  hatching.rs  input.rs  layer.rs  render.rs  tests.rs  types.rs
