[package]
name = "egui-map-view"
description = "An slippy map viewer for egui applications."
version = "0.2.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/braincow/egui-map-view"
homepage = "https://github.com/braincow/egui-map-view"
keywords = ["egui", "map", "openstreetmap"]

[dependencies]
eframe = "0.32.3"
poll-promise = "0.3"
image = "0.25"
reqwest = { version = "0.12", features = ["blocking"] }
thiserror = "2.0.17"
log = "0.4.28"
eyre = "0.6.12"
once_cell = "1.17.2"
egui = "0.32.3"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.145"

[features]
default = ["openstreetmap", "layers"]
karttapaikka = []
openstreetmap = []
layers = ["drawing-layer", "text-layer", "tile-layer"]
drawing-layer = []
text-layer = []
tile-layer = []

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "draw_layer"
path = "examples/draw_layer.rs"

[[example]]
name = "draw_many_layers"
path = "examples/draw_many_layers.rs"

[[example]]
name = "layout"
path = "examples/layout.rs"

[[example]]
name = "layout2"
path = "examples/layout2.rs"

[[example]]
name = "layout3"
path = "examples/layout3.rs"

[[example]]
name = "layout4"
path = "examples/layout4.rs"
