[package]
name = "egui-map-view"
description = "An slippy map viewer for egui applications."
version = "0.6.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/braincow/egui-map-view"
homepage = "https://github.com/braincow/egui-map-view"
keywords = ["egui", "map", "openstreetmap"]

[dependencies]
eframe = "0.34.3"
poll-promise = "0.3"
image = "0.25.10"
reqwest = { version = "0.13.4", features = ["blocking"] }
thiserror = "2.0.18"
log = "0.4.32"
eyre = "0.6.12"
once_cell = "1.21.4"
egui = { version = "0.34.3", features = ["serde"] }
egui_extras = { version = "0.34.3", features = [
    "svg",
    "image",
    "svg_text",
], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
earcutr = { version = "0.5.0", optional = true }
geojson = { version = "1.0.0", optional = true }
serde_json = { version = "1.0.150", optional = true }

[dev-dependencies]
env_logger = "0.11.10" # used for examples
serde_json = "1.0.150" # used for some tests
rfd = "0.17.2"         # used for examples

[features]
default = ["openstreetmap", "layers"]
karttapaikka = []
openstreetmap = []
layers = [
    "geojson",
    "drawing-layer",
    "text-layer",
    "area-layer",
    "tile-layer",
    "svg-layer",
]
drawing-layer = []
text-layer = []
svg-layer = ["dep:egui_extras"]
area-layer = ["dep:earcutr"]
tile-layer = []
geojson = ["dep:geojson", "dep:serde_json"]

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "draw_layer"
path = "examples/draw_layer.rs"

[[example]]
name = "layout"
path = "examples/layout.rs"

[[example]]
name = "layout2"
path = "examples/layout2.rs"

[[example]]
name = "layout3"
path = "examples/layout3.rs"

[[example]]
name = "layout4"
path = "examples/layout4.rs"

[[example]]
name = "areas"
path = "examples/areas.rs"

[[example]]
name = "svg_layer"
path = "examples/svg_layer.rs"

[[example]]
name = "draw_many_layers_geojson"
path = "examples/draw_many_layers_geojson.rs"
